Fixed a couple of really broken CSS rules (hopefully)

--- a/docs/assets/css/frb.css
+++ b/docs/assets/css/frb.css
@@ -3,6 +3,9 @@
         display: block;
         float: none;
         position: relative;
+        top: inherit;
+        left: inherit;
+        text-align: left;
         margin:200px 0 0 0;
         width: 590px;
         max-width: 600px;
